src/test/resources/frontendReference/invalid/semanticErr/expressions/stringElemErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 14:2 -- Incompatible type at str (expected: Any[], actual: STRING)
